--- a/index.html
+++ b/index.html
@@ -5,7 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Omnifood | Healthy Meals</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <img
+        src="/content/img/omnifood-logo.png"
+        alt="OmniFood logo"
+        class="logo"
+      />
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li><a class="main-nav-link" href="#">1</a></li>
+          <li><a class="main-nav-link" href="#">2</a></li>
+          <li><a class="main-nav-link" href="#">3</a></li>
+          <li><a class="main-nav-link nav-cta" href="#">4</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="section-hero">
+        <div class="hero">
+          <div class="hero-text-box">
+            <h1 class="hero-header">
+              A <span class="header-span">healthy</span> meal delivered to your
+              door, every single day
+            </h1>
+            <p class="hero-description">
+              The smart 365-days-per-year food subscription that will make you
+              eat healthy again. Tailored to your personal tastes and
+              nutritional needs.
+            </p>
+            <a href="#" class="btn btn-main margin-right-sm">Sign Up</a>
+            <a href="#" class="btn btn-secondary">Learn More</a>
+            <div class="delivered-meals">
+              <div class="delivered-imgs">
+                <img
+                  src="/content/img/customers/customer-1.jpg"
+                  alt="Customer photo"
+                />
+                <img
+                  src="/content/img/customers/customer-2.jpg"
+                  alt="Customer photo"
+                />
+                <img
+                  src="/content/img/customers/customer-3.jpg"
+                  alt="Customer photo"
+                />
+                <img
+                  src="/content/img/customers/customer-4.jpg"
+                  alt="Customer photo"
+                />
+                <img
+                  src="/content/img/customers/customer-5.jpg"
+                  alt="Customer photo"
+                />
+                <img
+                  src="/content/img/customers/customer-6.jpg"
+                  alt="Customer photo"
+                />
+              </div>
+              <p><span>250,000+</span> meals delivered last year!</p>
+            </div>
+          </div>
+          <div class="hero-img-box">
+            <img
+              src="/content/img/hero.png"
+              class="hero-img"
+              alt="A selection of different meals, food bowls, a woman enjoying food"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="section-how">
+        <div>Test 1</div>
+        <div>Test 2</div>
+        <div>Test 3</div>
+        <div>Test ></div>
+      </section>
+    </main>
+  </body>
 </html>
