--- a/index.html
+++ b/index.html
@@ -91,10 +91,12 @@
         </div>
       </section>
       <section class="section-how">
-        <div>Test 1</div>
-        <div>Test 2</div>
-        <div>Test 3</div>
-        <div>Test ></div>
+        <div class="container grid grid-2-cols">
+          <div>Test 1</div>
+          <div>Test 2</div>
+          <div>Test 3</div>
+          <div>Test ></div>
+        </div>
       </section>
     </main>
   </body>
