create the meal section and add some more reusable selectors

--- a/index.html
+++ b/index.html
@@ -91,6 +91,29 @@
           </div>
         </div>
       </section>
+
+      <section class="section-featured">
+        <div class="container">
+          <h2 class="heading-featured-in">As featured in</h2>
+          <div class="logo">
+            <img
+              src="/content/img/logos/business-insider.png"
+              alt="Business Insider logo"
+            />
+            <img src="/content/img/logos/forbes.png" alt="Forbes logo" />
+            <img
+              src="/content/img/logos/techcrunch.png"
+              alt="Techcrunch logo"
+            />
+            <img
+              src="/content/img/logos/the-new-york-times.png"
+              alt="New York Times logo"
+            />
+            <img src="/content/img/logos/usa-today.png" alt="USA Today logo" />
+          </div>
+        </div>
+      </section>
+
       <section class="section-how">
         <div class="container">
           <span class="subheading">How it works</span>
@@ -153,6 +176,100 @@
               class="step-img"
               alt="iphone app delivery screen"
             />
+          </div>
+        </div>
+      </section>
+
+      <section class="section-meals">
+        <div class="container text-center">
+          <span class="subheading">Meals</span>
+          <h2 class="heading-secondary">
+            Omnifood AI chooses from 5,000+ recipes
+          </h2>
+        </div>
+        <div class="container grid grid-3-cols">
+          <div class="meals">
+            <img
+              class="meal-img"
+              src="/content/img/meals/meal-1.jpg"
+              alt="Japanese Gyozas"
+            />
+            <div class="meal-content">
+              <div class="meal-tags">
+                <span class="tag tag-vegetarian">Vegetarian</span>
+              </div>
+              <p class="meal-title">Japanese Gyozas</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">
+                  <i class="fas fa-fire"></i> <span>650 Calories</span>
+                </li>
+                <li class="meal-attribute">
+                  <i class="fas fa-utensils"></i>
+                  <span>NutriScore &reg; 74</span>
+                </li>
+                <li class="meal-attribute">
+                  <i class="fas fa-star"></i> <span>4.9 rating (537)</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="meals">
+            <img
+              class="meal-img"
+              src="/content/img/meals/meal-2.jpg"
+              alt="Avocado Salad"
+            />
+            <div class="meal-content">
+              <div class="meal-tags">
+                <span class="tag tag-vegan">Vegan</span>
+                <span class="tag tag-paleo">Paleo</span>
+              </div>
+              <p class="meal-title">Avocado Salad</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">
+                  <i class="fas fa-fire"></i> <span>400 Calories</span>
+                </li>
+                <li class="meal-attribute">
+                  <i class="fas fa-utensils"></i>
+                  <span>NutriScore &reg; 92</span>
+                </li>
+                <li class="meal-attribute">
+                  <i class="fas fa-star"></i> <span>4.8 rating (441)</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="diet">
+            <h3 class="heading-tertiary">Works with any diet:</h3>
+            <ul class="list">
+              <li class="list-item">
+                <i class="fas fa-check"></i><span>Vegetarian</span>
+              </li>
+              <li class="list-item">
+                <i class="fas fa-check"></i><span>Vegan</span>
+              </li>
+              <li class="list-item">
+                <i class="fas fa-check"></i><span>Pescatarian</span>
+              </li>
+              <li class="list-item">
+                <i class="fas fa-check"></i><span>Gluten-free</span>
+              </li>
+              <li class="list-item">
+                <i class="fas fa-check"></i><span>Lactose-free</span>
+              </li>
+              <li class="list-item">
+                <i class="fas fa-check"></i><span>Keto</span>
+              </li>
+              <li class="list-item">
+                <i class="fas fa-check"></i><span>Paleo</span>
+              </li>
+              <li class="list-item">
+                <i class="fas fa-check"></i><span>Low FODMAP</span>
+              </li>
+              <li class="list-item">
+                <i class="fas fa-check"></i><span>Kid-friendly</span>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
