--- a/index.html
+++ b/index.html
@@ -272,6 +272,212 @@
             </ul>
           </div>
         </div>
+        <div class="recipes text-center">
+          <a class="meal-recipes" href="#">Click for more recipes</a>
+        </div>
+      </section>
+
+      <section class="section-testimonials">
+        <div class="testimonials-container">
+          <span class="subheading">Testimonials</span>
+          <h2 class="heading-secondary">Once you try it, you can't go back</h2>
+          <div class="testimonials">
+            <figure class="testimonial">
+              <img
+                class="testimonial-img"
+                src="/content/img/customers/ben.jpg"
+                alt="photo of a customer"
+              />
+              <blockquote class="testimonial-text">
+                The AI algorithm is crazy good, it chooses the right meals for
+                me every time. It's amazing not to worry about food anymore!
+              </blockquote>
+              <p class="testimonial-name">&mdash; Ben Hadley</p>
+            </figure>
+            <figure class="testimonial">
+              <img
+                class="testimonial-img"
+                src="/content/img/customers/dave.jpg"
+                alt="photo of a customer"
+              />
+              <blockquote class="testimonial-text">
+                Inexpensive, healthy and great-tasting meals, without even
+                having to order manually! It feels truly magical.
+              </blockquote>
+              <p class="testimonial-name">&mdash; Dave Bryson</p>
+            </figure>
+            <figure class="testimonial">
+              <img
+                class="testimonial-img"
+                src="/content/img/customers/steve.jpg"
+                alt="photo of a customer"
+              />
+              <blockquote class="testimonial-text">
+                Omnifood is a life saver! I just started a company, so there's
+                no time for cooking. I couldn't live without my daily meals now!
+              </blockquote>
+              <p class="testimonial-name">&mdash; Steve Miller</p>
+            </figure>
+            <figure class="testimonial">
+              <img
+                class="testimonial-img"
+                src="/content/img/customers/hannah.jpg"
+                alt="photo of a customer"
+              />
+              <blockquote class="testimonial-text">
+                I got Omnifood for the whole family, and it frees up so much
+                time! Plus, everything is organic and vegan and without plastic.
+              </blockquote>
+              <p class="testimonial-name">&mdash; Hannah Smith</p>
+            </figure>
+          </div>
+        </div>
+        <div class="gallery">
+          <figure class="gallery-items">
+            <img
+              src="/content/img/gallery/gallery-1.jpg"
+              alt="Food photo"
+              class="gallery-img"
+            />
+          </figure>
+          <figure class="gallery-items">
+            <img
+              src="/content/img/gallery/gallery-2.jpg"
+              alt="Food photo"
+              class="gallery-img"
+            />
+          </figure>
+          <figure class="gallery-items">
+            <img
+              src="/content/img/gallery/gallery-3.jpg"
+              alt="Food photo"
+              class="gallery-img"
+            />
+          </figure>
+          <figure class="gallery-items">
+            <img
+              src="/content/img/gallery/gallery-4.jpg"
+              alt="Food photo"
+              class="gallery-img"
+            />
+          </figure>
+          <figure class="gallery-items">
+            <img
+              src="/content/img/gallery/gallery-5.jpg"
+              alt="Food photo"
+              class="gallery-img"
+            />
+          </figure>
+          <figure class="gallery-items">
+            <img
+              src="/content/img/gallery/gallery-6.jpg"
+              alt="Food photo"
+              class="gallery-img"
+            />
+          </figure>
+          <figure class="gallery-items">
+            <img
+              src="/content/img/gallery/gallery-7.jpg"
+              alt="Food photo"
+              class="gallery-img"
+            />
+          </figure>
+          <figure class="gallery-items">
+            <img
+              src="/content/img/gallery/gallery-8.jpg"
+              alt="Food photo"
+              class="gallery-img"
+            />
+          </figure>
+          <figure class="gallery-items">
+            <img
+              src="/content/img/gallery/gallery-9.jpg"
+              alt="Food photo"
+              class="gallery-img"
+            />
+          </figure>
+          <figure class="gallery-items">
+            <img
+              src="/content/img/gallery/gallery-10.jpg"
+              alt="Food photo"
+              class="gallery-img"
+            />
+          </figure>
+          <figure class="gallery-items">
+            <img
+              src="/content/img/gallery/gallery-11.jpg"
+              alt="Food photo"
+              class="gallery-img"
+            />
+          </figure>
+          <figure class="gallery-items">
+            <img
+              src="/content/img/gallery/gallery-12.jpg"
+              alt="Food photo"
+              class="gallery-img"
+            />
+          </figure>
+        </div>
+      </section>
+
+      <section class="section-pricing">
+        <div class="container text-center">
+          <span class="subheading">Pricing</span>
+          <h2 class="heading-secondary">
+            Eating well without breaking the bank
+          </h2>
+        </div>
+
+        <div class="container grid grid-2-cols">
+          <div class="pricing-plan">
+            <header class="plan-header">
+              <div class="plan-name">Starter</div>
+              <div class="plan-price"><span>$</span>399</div>
+              <div class="plan-text">per month. That's just $13 per meal</div>
+            </header>
+            <ul class="list">
+              <li class="list-item">
+                <i class="fas fa-check"></i><span>1 meal per day</span>
+              </li>
+              <li class="list-item">
+                <i class="fas fa-check"></i
+                ><span>Order times are between 11am and 9p</span>
+              </li>
+              <li class="list-item">
+                <i class="fas fa-check"></i><span>Delivery is free</span>
+              </li>
+            </ul>
+            <div class="plan-signup">
+              <a href="#" class="btn btn-main">Sign Up</a>
+            </div>
+          </div>
+          <div class="pricing-plan">
+            <header class="plan-header">
+              <div class="plan-name">Complete</div>
+              <div class="plan-price"><span>$</span>649</div>
+              <div class="plan-text">per month. That's just $11 per meal</div>
+            </header>
+            <ul class="list">
+              <li class="list-item">
+                <i class="fas fa-check"></i><span>2 meals per day</span>
+              </li>
+              <li class="list-item">
+                <i class="fas fa-check"></i
+                ><span>Order 24/7</span>
+              </li>
+              <li class="list-item">
+                <i class="fas fa-check"></i><span>Delivery is free</span>
+              </li>
+              <li class="list-item">
+                <i class="fas fa-check"></i><span>Get access to latest recipes</span>
+              </li>
+            </ul>
+            <div class="plan-signup">
+              <a href="#" class="btn btn-main">Sign Up</a>
+            </div>
+          </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
