create features div and add pricing cards effects

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         </div>
 
         <div class="container grid grid-2-cols">
-          <div class="pricing-plan">
+          <div class="pricing-plan pricing-plan-starter">
             <header class="plan-header">
               <div class="plan-name">Starter</div>
               <div class="plan-price"><span>$</span>399</div>
@@ -441,17 +441,20 @@
               </li>
               <li class="list-item">
                 <i class="fas fa-check"></i
-                ><span>Order times are between 11am and 9p</span>
+                ><span>Order from 11am and 9p</span>
               </li>
               <li class="list-item">
                 <i class="fas fa-check"></i><span>Delivery is free</span>
+              </li>
+              <li class="list-item" style="height: 1.8rem;">
+                <i class="fas"></i><span></span>
               </li>
             </ul>
             <div class="plan-signup">
               <a href="#" class="btn btn-main">Sign Up</a>
             </div>
           </div>
-          <div class="pricing-plan">
+          <div class="pricing-plan pricing-plan-complete">
             <header class="plan-header">
               <div class="plan-name">Complete</div>
               <div class="plan-price"><span>$</span>649</div>
@@ -459,11 +462,11 @@
             </header>
             <ul class="list">
               <li class="list-item">
-                <i class="fas fa-check"></i><span>2 meals per day</span>
+                <i class="fas fa-check"></i><span><strong>2 meals</strong> per day</span>
               </li>
               <li class="list-item">
                 <i class="fas fa-check"></i
-                ><span>Order 24/7</span>
+                ><span>Order <strong>24/7</strong></span>
               </li>
               <li class="list-item">
                 <i class="fas fa-check"></i><span>Delivery is free</span>
@@ -477,6 +480,12 @@
             </div>
           </div>
           </div>
+        </div>
+        <div class="container grid grid-4-cols">
+          <div class="features">Feature 1</div>
+          <div class="features">Feature 2</div>
+          <div class="features">Feature 3</div>
+          <div class="features">Feature 4</div>
         </div>
       </section>
     </main>
