add feature icons and basic info

--- a/index.html
+++ b/index.html
@@ -201,14 +201,14 @@
               <p class="meal-title">Japanese Gyozas</p>
               <ul class="meal-attributes">
                 <li class="meal-attribute">
-                  <i class="fas fa-fire"></i> <span>650 Calories</span>
+                  <i class="fas fa-fire"></i> <span><strong>650</strong> Calories</span>
                 </li>
                 <li class="meal-attribute">
                   <i class="fas fa-utensils"></i>
-                  <span>NutriScore &reg; 74</span>
+                  <span>NutriScore &reg; <strong>74</strong></span>
                 </li>
                 <li class="meal-attribute">
-                  <i class="fas fa-star"></i> <span>4.9 rating (537)</span>
+                  <i class="fas fa-star"></i> <span><strong>4.9</strong> rating (537)</span>
                 </li>
               </ul>
             </div>
@@ -227,14 +227,14 @@
               <p class="meal-title">Avocado Salad</p>
               <ul class="meal-attributes">
                 <li class="meal-attribute">
-                  <i class="fas fa-fire"></i> <span>400 Calories</span>
+                  <i class="fas fa-fire"></i> <span><strong>400</strong> Calories</span>
                 </li>
                 <li class="meal-attribute">
                   <i class="fas fa-utensils"></i>
-                  <span>NutriScore &reg; 92</span>
+                  <span>NutriScore &reg; <strong>92</strong></span>
                 </li>
                 <li class="meal-attribute">
-                  <i class="fas fa-star"></i> <span>4.8 rating (441)</span>
+                  <i class="fas fa-star"></i> <span><strong>4.8</strong> rating (441)</span>
                 </li>
               </ul>
             </div>
@@ -481,11 +481,45 @@
           </div>
           </div>
         </div>
-        <div class="container grid grid-4-cols">
-          <div class="features">Feature 1</div>
-          <div class="features">Feature 2</div>
-          <div class="features">Feature 3</div>
-          <div class="features">Feature 4</div>
+        <div class="container grid grid-4-cols features">
+          <div class="feature">
+            <i class="fas fa-infinity"></i>
+            <p class="feature-title">
+              Never cook again!
+            </p>
+            <p class="feature-text">
+              Our subscriptions cover 365 days per year, even including major holidays.
+            </p>
+          </div>
+
+          <div class="feature">
+            <i class="fas fa-seedling"></i>
+            <p class="feature-title">
+              Local and organic
+            </p>
+            <p class="feature-text">
+              Our cooks only use local, fresh, and organic products to prepare your meals.
+            </p>
+          </div>
+
+          <div class="feature">
+            <i class="fas fa-recycle"></i>            
+            <p class="feature-title">
+              No waste
+            </p>
+            <p class="feature-text">
+              All our partners only use reusable containers to package all your meals.            </p>
+          </div>
+
+          <div class="feature">
+            <i class="fas fa-pause"></i>
+            <p class="feature-title">
+              Pause anytime
+            </p>
+            <p class="feature-text">
+              Going on vacation? Just pause your subscription, and we refund unused days.            </p>
+          </div>
+
         </div>
       </section>
     </main>
