finish features styling

--- a/index.html
+++ b/index.html
@@ -481,6 +481,12 @@
           </div>
           </div>
         </div>
+
+        <div class="container grid">
+          <aside class="plan-cancellation">
+           <sup>*</sup>Prices include all applicable taxes. Users can cancel at any time.
+          </aside>
+        </div>
         <div class="container grid grid-4-cols features">
           <div class="feature">
             <i class="fas fa-infinity"></i>
