--- a/index.html
+++ b/index.html
@@ -528,6 +528,12 @@
 
         </div>
       </section>
+      <section class="section-cta">
+        <div class="container cta">
+          <div class="cta-text-box">text</div>
+          <div class="cta-img-box" role="img" aria-label="woman eating meal"></div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
