--- a/index.html
+++ b/index.html
@@ -529,9 +529,37 @@
         </div>
       </section>
       <section class="section-cta">
-        <div class="container cta">
-          <div class="cta-text-box">text</div>
-          <div class="cta-img-box" role="img" aria-label="woman eating meal"></div>
+        <div class="container">
+          <div class="cta">
+            <div class="cta-text-box">
+              <h2 class="heading-secondary">Get your first meal for free!</h2>
+              <p class="cta-text">Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!</p>
+              <form class="cta-form" action="#">
+                <div>
+                  <label for="full-name">Full Name</label>
+                  <input id="full-name" type="text" placeholder="Toni Mous" required>
+                </div>
+
+                <div>
+                  <label for="email">Email address</label>
+                  <input id="email" type="email" placeholder="toni@example.com" required>
+                </div>
+
+                <div>
+                  <label for="">Where did you hear from us?</label>
+                  <select name="" id="select-where" required>
+                    <option value="">Please choose one option:</option>
+                    <option value="friend">Friend</option>
+                    <option value="youtube">Youtube</option>
+                    <option value="instagram">Instagram</option>
+                    <option value="others">Others</option>
+                  </select>
+                </div>
+                <button class="btn">Sign up now</button>
+              </form>
+            </div>
+            <div class="cta-img-box" role="img" aria-label="woman eating meal"></div>
+          </div>
         </div>
       </section>
     </main>
