create the footer and add the content

--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
   </head>
   <body>
     <header class="header">
-      <img
-        src="/content/img/omnifood-logo.png"
-        alt="OmniFood logo"
-        class="logo"
-      />
+      <a href="#">
+        <img
+          src="/content/img/omnifood-logo.png"
+          alt="OmniFood logo"
+          class="logo"
+        />
+      </a>
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a class="main-nav-link" href="#">1</a></li>
@@ -563,5 +565,83 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="container grid grid-5-cols">
+        <div class="logo-col">
+          <a href="#" class="footer-logo">
+            <img
+              src="/content/img/omnifood-logo.png"
+              alt="OmniFood logo"
+              class="logo"
+            />
+          </a>
+
+          <ul class="footer-social-links">
+            <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
+          </ul>
+
+          <p class="copyright">
+            Copyright &copy; 2021 by ToniMous Designs. All rights reserved.
+          </p>
+        </div>
+        <div class="address-col">
+          <p class="footer-heading">Contuct us</p>
+          <address class="contacts"> 
+            <p>623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+            <p>
+              <a href="tel:415-201-6370">
+                415-201-6370
+              </a> <br>
+              <a href="mailto:hello@omnifood.com">
+                hello@omnifood.com
+              </a>
+            </p>
+          </address>
+        </div>
+        <nav class="nav-col">
+          <p class="footer-heading">Account</p>
+          <ul class="footer-nav">
+            <li><a href="#">Create account
+            </a></li>
+            <li><a href="#">Sign in
+            </a></li>
+            <li><a href="#">iOS app
+            </a></li>
+            <li><a href="#">Android app
+            </a></li>
+          </ul>
+        </nav>
+
+        <nav class="nav-col">
+          <p class="footer-heading">Company</p>
+          <ul class="footer-nav">
+            <li><a href="#">About Omnifood
+            </a></li>
+            <li><a href="#">For Business
+            </a></li>
+            <li><a href="#">Cooking partners
+            </a></li>
+            <li><a href="#">Careers
+            </a></li>
+          </ul>
+        </nav>
+
+        <nav class="nav-col">
+          <p class="footer-heading">Resources</p>
+          <ul class="footer-nav">
+            <li><a href="#">Recipe directory
+            </a></li>
+            <li><a href="#">Help center
+            </a></li>
+            <li><a href="#">Privacy & terms
+            </a></li>
+          </ul>
+        </nav>
+
+      </div>
+    </footer>
   </body>
 </html>
