finish styling the footer

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
       </a>
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#">1</a></li>
-          <li><a class="main-nav-link" href="#">2</a></li>
-          <li><a class="main-nav-link" href="#">3</a></li>
-          <li><a class="main-nav-link nav-cta" href="#">4</a></li>
+          <li><a class="main-nav-link" href="#">How it works</a></li>
+          <li><a class="main-nav-link" href="#">Meals</a></li>
+          <li><a class="main-nav-link" href="#">Testimonials</a></li>
+          <li><a class="main-nav-link" href="#">Pricing</a></li>
+          <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
         </ul>
       </nav>
     </header>
@@ -578,9 +579,9 @@
           </a>
 
           <ul class="footer-social-links">
-            <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            <li><a class="footer-link" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            <li><a class="footer-link" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></li>
+            <li><a class="footer-link" href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
           </ul>
 
           <p class="copyright">
@@ -590,12 +591,12 @@
         <div class="address-col">
           <p class="footer-heading">Contuct us</p>
           <address class="contacts"> 
-            <p>623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+            <p class="address">623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
             <p>
-              <a href="tel:415-201-6370">
+              <a class="footer-link" href="tel:415-201-6370">
                 415-201-6370
               </a> <br>
-              <a href="mailto:hello@omnifood.com">
+              <a class="footer-link" href="mailto:hello@omnifood.com">
                 hello@omnifood.com
               </a>
             </p>
@@ -604,13 +605,13 @@
         <nav class="nav-col">
           <p class="footer-heading">Account</p>
           <ul class="footer-nav">
-            <li><a href="#">Create account
+            <li><a class="footer-link" href="#">Create account
             </a></li>
-            <li><a href="#">Sign in
+            <li><a class="footer-link" href="#">Sign in
             </a></li>
-            <li><a href="#">iOS app
+            <li><a class="footer-link" href="#">iOS app
             </a></li>
-            <li><a href="#">Android app
+            <li><a class="footer-link" href="#">Android app
             </a></li>
           </ul>
         </nav>
@@ -618,13 +619,13 @@
         <nav class="nav-col">
           <p class="footer-heading">Company</p>
           <ul class="footer-nav">
-            <li><a href="#">About Omnifood
+            <li><a class="footer-link" href="#">About Omnifood
             </a></li>
-            <li><a href="#">For Business
+            <li><a class="footer-link" href="#">For Business
             </a></li>
-            <li><a href="#">Cooking partners
+            <li><a class="footer-link" href="#">Cooking partners
             </a></li>
-            <li><a href="#">Careers
+            <li><a class="footer-link" href="#">Careers
             </a></li>
           </ul>
         </nav>
@@ -632,11 +633,11 @@
         <nav class="nav-col">
           <p class="footer-heading">Resources</p>
           <ul class="footer-nav">
-            <li><a href="#">Recipe directory
+            <li><a class="footer-link" href="#">Recipe directory
             </a></li>
-            <li><a href="#">Help center
+            <li><a class="footer-link" href="#">Help center
             </a></li>
-            <li><a href="#">Privacy & terms
+            <li><a class="footer-link" href="#">Privacy & terms
             </a></li>
           </ul>
         </nav>
